--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,10 @@ body {
 }
 
 .gameboard {
-    width: 450px;
-    height: 450px;
+    position: relative;
+    left: 23px;
+    width: 400px;
+    height: 400px;
     color: #4664a8;
     border: none;
 
@@ -45,10 +47,11 @@ body {
 }
 
 .scores {
+    color: rgb(90, 90, 90);
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 50px;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     width: 450px;
     height: 75px;
 }
@@ -86,10 +89,38 @@ body {
 }
 
 #restartBtn {
+    font-size: .98rem;
     color: green;
     padding: 0;
     border: none;
     background: none;
+}
+
+.scores,
+footer {
+    font-family: 'Roboto', sans-serif;
+}
+
+footer {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    font-size: 15px;
+    text-align: center;
+    position: absolute;
+    bottom: -16px;
+    height: 2.5rem;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#githubImg {
+    position: relative;
+    bottom: 4px;
+    width: 24px;
+    height: auto;
 }
 
 /* from idealResult.jpg
