--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,19 @@ footer {
     height: auto;
 }
 
+
+/* removes blue highlighted box when clicking an element */
+span,
+div,
+h1 {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 /* from idealResult.jpg
 color for O's: #f24b4d 
 color for X's: #4664a8
